deepracer-timer/demo-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deepracer-timer
    app.kubernetes.io/name: deepracer-timer
  name: deepracer-timer
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: deepracer-timer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: deepracer-timer
        app.kubernetes.io/name: deepracer-timer
    spec:
      containers:
        - image: nalbam/deepracer-timer:v0.2.49
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: deepracer-timer
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 120m
              memory: 153Mi
            requests:
              cpu: 100m
              memory: 128Mi
