deepracer-timer/demo-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deepracer-timer
    app.kubernetes.io/name: deepracer-timer
  name: deepracer-timer
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: deepracer-timer
